--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "18.1.0",
     "react-native": "0.70.2",
     "react-native-gesture-handler": "^2.7.1",
+    "react-native-heroicons": "^3.2.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.1"
+    "react-native-screens": "^3.18.1",
+    "react-native-svg": "^13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
